# shivakalabs

./: .env.local  .replit  404.html  API_ROUTES_TEMPLATE.ts  ARCHITECTURE_FIX.md  AUDIT_RESTRUCTURE_REPORT.md  BUGS_FIXED.md  CHANGES_COMPLETED.md  IMAGE_ASSET_LIST.md  IMAGE_REQUIREMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  INDIVIDUAL_SERVICE_IMAGES_GUIDE.md  PHOTOS_NEEDED.md  PROJECT_SUMMARY.md  README.md  REBUILD_SUMMARY.md  SERVICES_AND_IMAGES_SUMMARY.md  SERVICES_SETUP.md  SERVICE_IMAGE_FILENAMES.md  TECHNICAL_AUDIT_REPORT.md  TESTING_GUIDE.md  about-us.html  design.html  ecitizen.html  good-conduct.html  index..jsx  index.html  index.html.bak  kra-pin.html  marketing.html  next.config.js  next.config.ts  package-lock.json  package.json  passport.html  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  (+9 more)
.github/workflows/: deploy.yml
.migration-backup/: README.md  package-lock.json  package.json
.migration-backup/src/: index.css  main.jsx
.next/: trace
.next/server/: server-reference-manifest.json  webpack-runtime.js
app/: globals.css  layout.tsx
attached_assets/: Pasted-1-GLOBALIZATION-LOCALIZATION-ENGINE-A-Remove-Kenya-specific-language-Replace-all-mentions-of--1764352573394_1764352573395.txt  Pasted-Shivakalabs-a-Kenyan-Multinational-Technology-Company-A_1774617156256.txt
components/: ContentArea.tsx  Footer.tsx  Header.tsx  WhatsAppButton.tsx  footer.html  navbar.html
docs/: index.html
js/: app.js  components.js  init.js  services.js
lib/: security.ts  store.ts
scripts/: github-sync.sh
src/pages/: Home.jsx
(+82 files in other folders)
