[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.3.0",
    "docx>=0.2.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-limiter>=4.0.0",
    "flask-talisman>=1.1.0",
    "flask-wtf>=1.2.2",
    "openai>=2.8.1",
    "python-docx>=1.2.0",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "stripe>=14.0.1",
    "werkzeug>=3.1.3",
]
